--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <script src="./js/aos.js"></script>   
     </head>
 <body>
+    <div class="UpperImg"><img src="./img/shape/Top Design.png" alt="" height="200px" width="100%"></div>
     <div class="LogoMain text-center">
         <IMAGE src="./img/logo/indomededucare.png"></IMAGE>
     </div>
@@ -20,13 +21,19 @@
 <form action="#" onsubmit="return login()" method="post" class="LoginForm text-center">
     <input type="text" placeholder="Username / Number" id="name" name="name" class="LoginName" data-aos="fade-right" data-aos-duration="1000" required ><br>
     <input  type="password" placeholder="Password" id="password" name="password" class="LoginPassword" data-aos="fade-left" data-aos-duration="1000" required><br>
+    <div class="text-center"> Forgot Password</div>
     <button type="submit" value="Login" class="LoginButton" data-aos="zoom-in"data-aos-duration="2000" >Login</button>
-    
+    <hr class="line">
     <p class="TextRegister">Dont have Account?<a href="./Register/register.html"> Register Now! </a></p>
 
 </form>
     </div>
+    
+
+
+<div class="LowerImg"><img src="./img/shape/Bottom Design.png" width="100%" height="200px" alt=""></div>
 </body>
+
 <script>
     AOS.init({
         duration: 650,
@@ -50,6 +57,5 @@
         }
         return false; // prevent form submission
     }
-</script>
 </script>
 </html>
