--- a/Register/register.html
+++ b/Register/register.html
@@ -13,7 +13,8 @@
     <script src="../js/aos.js"></script>   
 </head>
 <body>
-    <div class="LogoMain text-center">
+    <div class="UpperImg"><img src="../img/shape/Top Design.png" alt="" height="200px" width="100%"></div>
+    <div class="LogoMain1 text-center">
         <IMAGE src="../img/logo/indomededucare.png"></IMAGE>
     </div>
     <div class="RegisterPage">
@@ -23,10 +24,12 @@
     <input type="email" placeholder="Email" name="name" class="Registeremail" ><br>
     <input  type="password" placeholder="New Password" name="password" class="RegisterPassword" ><br> 
     <button type="submit" value="Register" class="RegisterButton" >Register</button>
-    <p class="TextRegister">Already have an Account?<a href="../login.html"> Login Now! </a></p>
+    <hr class="line">
+    <p class="TextRegister">Already have an Account?<a href="../index.html"> Login Now! </a></p>
 
 </form>
     </div>
+    <div class="LowerImg"><img src="../img/shape/Bottom Design.png" alt="" height="200px" width="100%"></div>
 </body>
 <script>
     AOS.init({
