--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </div>
     <div class="LoginPage">
 <form action="#" onsubmit="return login()" method="post" class="LoginForm text-center">
-    <input type="text" placeholder="Username / Number" id="name" name="name" class="LoginName" data-aos="fade-right" data-aos-duration="1000" required ><br>
-    <input  type="password" placeholder="Password" id="password" name="password" class="LoginPassword" data-aos="fade-left" data-aos-duration="1000" required><br>
+    <input type="text" placeholder="Username / Number" id="name" name="name" class="LoginName" required ><br>
+    <input  type="password" placeholder="Password" id="password" name="password" class="LoginPassword" required><br>
     <div class="text-center"> Forgot Password</div>
-    <button type="submit" value="Login" class="LoginButton" data-aos="zoom-in"data-aos-duration="2000" >Login</button>
+    <button type="submit" value="Login" class="LoginButton" data-aos="zoom-in"data-aos-duration="1000" >Login</button>
     <hr class="line">
     <p class="TextRegister">Dont have Account?<a href="./Register/register.html"> Register Now! </a></p>
 
