--- a/Register/register.html
+++ b/Register/register.html
@@ -23,7 +23,7 @@
     <input type="number" placeholder="Mobile Number" name="name" class="RegisterNumber" ><br>
     <input type="email" placeholder="Email" name="name" class="Registeremail" ><br>
     <input  type="password" placeholder="New Password" name="password" class="RegisterPassword" ><br> 
-    <button type="submit" value="Register" class="RegisterButton" >Register</button>
+    <button type="submit" value="Register" class="RegisterButton" data-aos="zoom-in" data-aos-duration="1000" >Register</button>
     <hr class="line">
     <p class="TextRegister">Already have an Account?<a href="../index.html"> Login Now! </a></p>
 
