--- a/home.html
+++ b/home.html
@@ -23,15 +23,16 @@
 
 <div class="TopMenu">
     <div class="LeftMenu">
-        <p>Welcome Ajith Kumar</p>
+        <h6>Welcome Ajith Kumar</h6>
     </div>
     <div class="RightMenu">
         <div class="AccountMenu">
             <div class="icon">
-                <i class="fa fa-user-circle "> </i>
+                <i class="fa fa-sign-out"> </i>
             </div>
         <div class="acc">
-            <p> Account</p> 
+         Logout
+           
         </div> 
         
         </div>
