--- a/home.html
+++ b/home.html
@@ -39,54 +39,13 @@
         </div>
     </div>
     
+    <div class="menubar">
+      <a href="#">
+<img src="./img/content/1 Home banner with button.png" width="100%" alt=""></a>
+    </div>
 <!-- menu end -->
 <!-- slider -->
- <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel" style=" padding:20px 20px 0 20px;">
-
-    <!-- Indicators/dots -->
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-    </div>
-  
-    <!-- The slideshow/carousel -->
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="./img/slider/homebanner2.jpg" alt="Los Angeles" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="./img/slider/homebanner2.jpg" alt="Chicago" class="d-block w-100">
-      </div>
-      <div class="carousel-item">
-        <img src="./img/slider/homebanner2.jpg" alt="New York" class="d-block w-100">
-      </div>
-    </div>
-  
-    <!-- Left and right controls/icons -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-    </button>
-  </div>
 <!-- slider end -->
-<div class="row">
-    <div class="col-lg-12 text-center">
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/TulNLS4Ez5k?si=J9bFXN3WDCuDncWX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="padding:20px;margin:0;" ></iframe>
-    </div>
-</div>
-<div class="row NeetContent">
-    <div class="col-lg-6">
-<img src="./img/content/neetimg2.jpg" width="100%" alt="" data-aos="fade-right" data-aos-duration="1000">
-    </div>
-    <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1000" >
-        <br>
-<p>The NEET exam consists of a total of 180 questions. Answer: The NEET exam covers three subjects: Physics, Chemistry, and Biology (Botany and Zoology). Answer: Yes, for each incorrect answer, one mark is deducted from the total score. However, no marks are deducted for unanswered questions.</p>
-    </div>
-</div>
 <!-- navbar start -->
 <div class="NavBar">
     <div class="LeftBar">
