--- a/home.html
+++ b/home.html
@@ -13,6 +13,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="./js/aos.js"></script>   
     </head>
+     <style>
+      .menubar{
+        padding: 35px 0 35px 0;
+      }
+    </style>
 <body>
     <!-- <div class="bgloader">
 <div id="preloader">
