--- a/home.html
+++ b/home.html
@@ -13,9 +13,13 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="./js/aos.js"></script>   
     </head>
-     <style>
+    <style>
       .menubar{
-        padding: 15px 0 15px 0;
+        padding: 30px 0 20px 0;
+      }
+      .QuizSubject{
+        display: flex;
+        justify-content: space-around;
       }
     </style>
 <body>
@@ -52,6 +56,11 @@
 <!-- slider -->
 <!-- slider end -->
 <!-- navbar start -->
+<div class="QuizSubject">
+    <img src="./img/content/3 Chemistry.png" width="30%" alt="">
+    <img src="./img/content/5 Biology.png" width="30%" alt="">
+    <img src="./img/content/4 Physics.png" width="30%" alt="">
+    </div>
 <div class="NavBar">
     <div class="LeftBar">
     <i class="fa fa-home"></i>
