--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         if( name == "ajith" && password == "ajith123")
         {
             alert("Login Success");
-            window.location.href = "home.php";
+            window.location.href = "home.html";
         }
         else
         {
