--- a/home.html
+++ b/home.html
@@ -40,8 +40,9 @@
                 <i class="fa fa-sign-out"> </i>
             </div>
         <div class="acc">
+            <a href="index.html">
          Logout
-           
+            </a>
         </div> 
         
         </div>
