--- a/home.html
+++ b/home.html
@@ -21,6 +21,9 @@
         display: flex;
         justify-content: space-around;
       }
+      .utube{
+        border-radius: 20px;
+      }
     </style>
 <body>
     <!-- <div class="bgloader">
@@ -40,9 +43,7 @@
                 <i class="fa fa-sign-out"> </i>
             </div>
         <div class="acc">
-            <a href="index.html">
-         Logout
-            </a>
+        <a href="login.html"> Logout  </a> 
         </div> 
         
         </div>
@@ -61,6 +62,19 @@
     <img src="./img/content/3 Chemistry.png" width="30%" alt="">
     <img src="./img/content/5 Biology.png" width="30%" alt="">
     <img src="./img/content/4 Physics.png" width="30%" alt="">
+    </div>
+    <div class="row">
+        <div class="col-lg-12 text-center utube">
+        <iframe width="100%" height="260" src="https://www.youtube.com/embed/AN82z4nQHTA?si=CacMQ-e8_CQkTvjR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="padding:20px;margin:0;" ></iframe>
+        </div>
+    </div>
+    <div class="text_content">
+        <p>Welcome to our NEET Quiz App, your ultimate companion for acing the National Eligibility cum Entrance Test (NEET). Our app features a comprehensive range of quizzes, designed to cover all essential topics and simulate the real exam environment, ensuring you’re well-prepared.</p>
+        
+        <p>Receive instant feedback and detailed explanations for each question, allowing you to pinpoint your strengths and focus on areas needing improvement. Track your progress, stay motivated with our rewards system, and challenge yourself with varied difficulty levels.
+        </p>
+        <p>Receive instant feedback and detailed explanations for each question, allowing you to pinpoint your strengths and focus on areas needing improvement. Track your progress, stay motivated with our rewards system, and challenge yourself with varied difficulty levels.
+        </p>
     </div>
 <div class="NavBar">
     <div class="LeftBar">
