--- a/Register/register.html
+++ b/Register/register.html
@@ -28,7 +28,7 @@
 
 </form>
     </div>
-    <div class="LowerImg"><img src="../img/shape/Bottom Design.png" alt="" height="150px" width="100%"></div>
+    <div class="LowerImg"><img src="../img/shape/Bottom Design.png" alt="" height="150px" width="100%" style="margin-top:10px;" ></div>
 </body>
 <script>
     AOS.init({
