--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                 <i class="fa fa-sign-out"> </i>
             </div>
         <div class="acc">
-        <a href="login.html"> Logout  </a> 
+        <a href="index.html"> Logout  </a> 
         </div> 
         
         </div>
