--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
                 <i class="fa fa-sign-out"> </i>
             </div>
         <div class="acc">
-        <a href="index.html"> Logout  </a> 
+        <a href="login.html"> Logout  </a> 
         </div> 
         
         </div>
@@ -78,15 +78,15 @@
     </div>
 <div class="NavBar">
     <div class="LeftBar">
-    <i class="fa fa-home"></i>
+    <i class="fa fa-pencil-square-o"></i>
     </div>
 
     <div class="CenterBar">
-        <a href="#">Start Quiz</a>
+        <i class="fa fa-home"></i>
     </div>
 
     <div class="RightBar">
-    <i class="fa fa-cog"></i>
+    <i class="fa fa-user-circle-o"></i>
     </div> 
 </div>
 <!-- navbar end -->
