--- a/chemistry.html
+++ b/chemistry.html
@@ -60,88 +60,109 @@
 <h3 class="quizhead text-center">Chemistry Quiz</h3>
 <form>
     <div class="questions">
-    <p>
-     1. Which of the following is a scalar quantity?
-<br>
-   <input type="radio"> Velocity
-   <input type="radio"> Force
-   <input type="radio"> Speed
-   <input type="radio"> Acceleration
-    </p>
+        <div class="question1">
+            <p>
+                1. Which of the following is a scalar quantity?<br>
+                <input type="radio" id="q1" name="q1" value="" required> Velocity<br>
+                <input type="radio" id="q1" name="q1" value=""> Force<br>
+                <input type="radio" id="q1" name="q1" value=""> Speed<br>
+                <input type="radio" id="q1" name="q1" value=""> Acceleration<br>
+            </p>
+        </div>
+<div class="question2">
     <p>
       2. What is the unit of electric current?
         <br>
-           <input type="radio"> Volt
-           <input type="radio"> Ampere
-           <input type="radio"> Ohm
-           <input type="radio"> Watt
+           <input type="radio" id="q2" name="q2" value=""required> Volt<br>
+           <input type="radio" id="q2" name="q2" value=""> Ampere<br>
+           <input type="radio" id="q2" name="q2" value=""> Ohm<br>
+           <input type="radio" id="q2" name="q2" value=""> Watt<br>
             </p>
+</div>
+<div class="question1">
             <p>
             3. Newton's first law of motion is also known as the law of
             <br>
-            <input type="radio"> Inertia
-            <input type="radio"> Acceleration
-            <input type="radio"> Momentum
-            <input type="radio"> Action and reaction
+            <input type="radio" id="q3" name="q3" value=""required> Inertia<br>
+            <input type="radio" id="q3" name="q3" value=""> Acceleration<br>
+            <input type="radio" id="q3" name="q3" value=""> Momentum<br>
+            <input type="radio" id="q3" name="q3" value=""> Action and reaction<br>
             </p>
+</div>
+<div class="question2">
             <p>
             4. What is the SI unit of frequency?
             <br>
-            <input type="radio"> Hertz
-            <input type="radio"> Joule
-            <input type="radio"> Newton
-            <input type="radio"> Pascal
+            <input type="radio" id="q4" name="q4" value=""required> Hertz<br>
+            <input type="radio" id="q4" name="q4" value=""> Joule<br>
+            <input type="radio" id="q4" name="q4" value=""> Newton<br>
+            <input type="radio" id="q4" name="q4" value=""> Pascal<br>
             </p>
+</div>
+<div class="question1">
             <p>
             5. Which of the following is not a unit of energy?
             <br>
-            <input type="radio"> Joule
-            <input type="radio"> Calorie
-            <input type="radio"> Watt
-            <input type="radio"> Electronvolt
+            <input type="radio" id="q5" name="q5" value=""required> Joule<br>
+            <input type="radio" id="q5" name="q5" value=""> Calorie<br>
+            <input type="radio" id="q5" name="q5" value=""> Watt<br>
+            <input type="radio" id="q5" name="q5" value=""> Electronvolt<br>
             </p>
+</div>
+<div class="question2">
             <p>
             6. The acceleration due to gravity on Earth is approximately?
             <br>
-            <input type="radio"> 9.8 m/s²
-            <input type="radio"> 8.9 m/s²
-            <input type="radio"> 7.8 m/s²
-            <input type="radio"> 10.2 m/s²
+            <input type="radio" id="q6" name="q6" value=""required> 9.8 m/s²<br>
+            <input type="radio" id="q6" name="q6" value=""> 8.9 m/s²<br>
+            <input type="radio" id="q6" name="q6" value=""> 7.8 m/s²<br>
+            <input type="radio" id="q6" name="q6" value=""> 10.2 m/s²<br>
             </p>
+</div>
+<div class="question1">
             <p>
             7. What is the unit of electrical resistance? 
             <br>
-            <input type="radio"> Ampere
-            <input type="radio"> Volt
-            <input type="radio"> Ohm
-            <input type="radio"> Coulomb
+            <input type="radio" id="q7" name="q7" value=""required> Ampere<br>
+            <input type="radio" id="q7" name="q7" value=""> Volt<br>
+            <input type="radio" id="q7" name="q7" value=""> Ohm<br>
+            <input type="radio" id="q7" name="q7" value=""> Coulomb<br>
             </p>
+</div>
+<div class="question2">
             <p>
             8. Which law explains the relationship between the current and potential difference?
             <br>
-            <input type="radio"> Ohm’s Law
-            <input type="radio"> Newton’s Law
-            <input type="radio"> Kepler’s Law
-            <input type="radio"> Boyle’s Law
+            <input type="radio" id="q8" name="q8" value=""required> Ohm’s Law<br>
+            <input type="radio" id="q8" name="q8" value=""> Newton’s Law<br>
+            <input type="radio" id="q8" name="q8" value=""> Kepler’s Law<br>
+            <input type="radio" id="q8" name="q8" value=""> Boyle’s Law<br>
             </p>
+</div>
+<div class="question1">
             <p>
             9. What type of mirror has a reflecting surface that bulges outward?
                                                                 <br>
-            <input type="radio"> Plane Mirror
-            <input type="radio"> Concave Mirror
-            <input type="radio"> Convex Mirror
-            <input type="radio"> Spherical Mirror
+            <input type="radio" id="q9" name="q9" value=""required> Plane Mirror<br>
+            <input type="radio" id="q9" name="q9" value=""> Concave Mirror<br>
+            <input type="radio" id="q9" name="q9" value=""> Convex Mirror<br>
+            <input type="radio" id="q9" name="q9" value=""> Spherical Mirror<br>
             </p>
+</div>
+<div class="question2">
             <p>
             10. What is the speed of light in a vacuum?
             <br>
-            <input type="radio"> 3 x 10^6 m/s
-            <input type="radio"> 3 x 10^8 m/s
-            <input type="radio"> 3 x 10^5 m/s
-            <input type="radio"> 3 x 10^7 m/s
+            <input type="radio" id="q10" name="q10" value="" required> 3 x 10^6 m/s<br>
+            <input type="radio" id="q10" name="q10" value="" > 3 x 10^8 m/s<br>
+            <input type="radio" id="q10" name="q10" value="" > 3 x 10^5 m/s<br>
+            <input type="radio" id="q10" name="q10" value="" > 3 x 10^7 m/s<br>
             </p>
-                                                                            
+</div>                                                                
         </div>
+<div class="text-center">
+        <button type="submit" value="Submit" class="quizbtn">Submit</button>
+</div>
 </form>
             <!-- quiz question end-->
             <div class="NavBar">
