--- a/physics.html
+++ b/physics.html
@@ -185,7 +185,7 @@
 function quizcomplect(event) {
   event.preventDefault();
   alert("Quiz successfully completed");
-  window.location.href = "home.html";
+  window.location.href = "answers.html";
 }
 </script>
 </html>
