--- a/chemistry.html
+++ b/chemistry.html
@@ -58,7 +58,7 @@
                         <!-- quiz question -->
 
 <h3 class="quizhead text-center">Chemistry Quiz</h3>
-<form>
+<form onsubmit="quizcomplect(event)">
     <div class="questions">
         <div class="question1">
             <p>
@@ -182,4 +182,12 @@
                 </div> 
             </div>
     </body>
+
+    <script>
+        function quizcomplect(event) {
+          event.preventDefault();
+          alert("Quiz successfully completed");
+          window.location.href = "answers.html";
+        }
+        </script>
 </html>
