--- a/answers.html
+++ b/answers.html
@@ -163,7 +163,7 @@
                 </div>
             
                 <div class="RightBar">
-                   <a href="#">
+                   <a href="account.html">
                 <i class="fa fa-user-circle-o"></i></a>
                 </div> 
             </div>   
