--- a/chemistry.html
+++ b/chemistry.html
@@ -177,7 +177,7 @@
                 </div>
             
                 <div class="RightBar">
-                   <a href="#">
+                   <a href="account.html">
                 <i class="fa fa-user-circle-o"></i></a>
                 </div> 
             </div>
