--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
         <script src="./js/aos.js"></script>   
     </head>
     <style>
-        .LeftBar{
+    .LeftBar{
     margin-top: -65px;
     border-radius: 50%;
     background: #ffff;
@@ -93,7 +93,7 @@
                 </div>
             
                 <div class="RightBar">
-                   <a href="#">
+                   <a href="account.html">
                 <i class="fa fa-user-circle-o"></i></a>
                 </div> 
             </div>
