--- a/account.html
+++ b/account.html
@@ -77,9 +77,9 @@ Father Name: <input type="text"placeholder="Enter your Father name"name="fathern
     <br>
 Mother Name:    <input type="text"placeholder="Enter your Mother name"name="mothername"id="mothername">
     <br>
-Emergency Number:<input type="number"placeholder="Emergency number"name="enumber"id="enumber">
+Other Number:<input type="number"placeholder="Emergency number"name="enumber"id="enumber">
     <br>
-<textarea placeholder="Enter your Address" name="address" id="address"></textarea>
+Address:<textarea placeholder="Enter your Address" name="address" id="address"></textarea>
     <br>
 City:    <input type="text"placeholder="City"name="city"id="city">
     <br>
