--- a/account.html
+++ b/account.html
@@ -79,8 +79,9 @@ Mother Name:    <input type="text"placeholder="Enter your Mother name"name="moth
     <br>
 Other Number:<input type="number"placeholder="Emergency number"name="enumber"id="enumber">
     <br>
-Address:<textarea placeholder="Enter your Address" name="address" id="address"></textarea>
-    <br>
+<div class="address">
+<p>Address:</p><textarea placeholder="Enter your Address" name="address" id="address"></textarea>
+</div>
 City:    <input type="text"placeholder="City"name="city"id="city">
     <br>
 State:   <input type="text"placeholder="State"name="state"id="state">
