--- a/home.html
+++ b/home.html
@@ -92,11 +92,9 @@
     <img src="./img/content/5 Biology.png" width="30%" alt="" onclick="biology(event)">
     
     </div>
-    <div class="row">
-        <div class="col-lg-12 text-center utube">
-        <iframe width="100%" height="260" src="https://www.youtube.com/embed/AN82z4nQHTA?si=CacMQ-e8_CQkTvjR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="padding:20px;" ></iframe>
-        </div>
-    </div>
+   
+        <iframe width="100%" height="260" src="https://www.youtube.com/embed/AN82z4nQHTA?si=CacMQ-e8_CQkTvjR" class="text-center" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="padding:20px;" ></iframe>
+
     <div class="text_content">
         <p>Welcome to our NEET Quiz App, your ultimate companion for acing the National Eligibility cum Entrance Test (NEET). Our app features a comprehensive range of quizzes, designed to cover all essential topics and simulate the real exam environment, ensuring you’re well-prepared.</p>
     </div>
